--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -30,7 +30,7 @@ body {
   color: #333;
   direction: rtl !important;
 
-  
+
   &::-webkit-scrollbar {
     background: #646468;
     height: 8px;
@@ -81,14 +81,17 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  max-width: 50rem;
+  width: calc(35rem + 15vw);
   border-radius: 4rem;
-  margin: 10rem auto ;
+  margin: 10rem  auto 4rem auto;
   overflow-x: hidden;
   padding: 1rem 3rem;
   background-color: rgba(253, 253, 253, 1);
   box-shadow: 0 2px 43px 1px rgba(0, 0, 0, 0.19);
   border: 1px solid rgba(0, 0, 0, 0.06);
+  &.detail{
+    margin:4rem auto;
+  }
   &.auth {
     max-width: calc(500px + 10vw);
     flex-direction: column;
@@ -208,12 +211,16 @@ body {
   color: #333;
   padding: 0.6rem 1.3rem;
   font-size: 1rem;
+  font-family: "Vazir", sans-serif;
   border: none;
   cursor: pointer;
   border-radius: 5px;
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
+  &:hover {
+    box-shadow: 0 8px 6px -6px black;
+  }
   .spinner {
     width: 1.5rem;
     height: 1.5rem;
@@ -235,7 +242,9 @@ body {
         transform: rotate(360deg);
       }
     }
+   
   }
+  
 
   &.btn-primary,
   &.bg-primary,
@@ -462,7 +471,7 @@ body {
   top: 0;
   border-bottom: solid 1px $primary-color;
   opacity: 0.9;
-  background-color: $dark-color;
+  backdrop-filter: blur(10px);
 
   h1 {
     position: absolute;
@@ -510,6 +519,7 @@ body {
       padding: 0;
       margin: 0 0.25rem;
       border-radius: 0.3rem;
+      background-color:#0077b5;
 
       &:hover {
         background-color: #3f4449dc;
@@ -528,6 +538,7 @@ body {
         padding: 0.7rem 1rem;
         color: #fff;
         margin: 0 0.3rem;
+        
 
         &:hover {
           color: #fff !important;
@@ -726,12 +737,13 @@ body {
   margin-bottom: 0.5rem;
 }
 
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .container {
-    margin: 7rem 1rem 1rem;
+    margin: 4rem auto ;
     padding: 1rem 0.5rem;
-
+    width: min(80%,95%);
     .container-group {
       padding: 1rem 0;
       h1,
@@ -741,6 +753,7 @@ body {
         align-items: center;
         justify-content: center;
       }
+     
       .form {
         .form-group {
           align-content: center;
@@ -759,6 +772,7 @@ body {
       }
     }
   }
+  
   .alert {
     width: 50%;
     font-size: 0.8rem;
@@ -895,13 +909,12 @@ body {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
+  z-index: 5;
   width: 100%;
   height: 100%;
   margin: auto;
-  background-color: rgba(0, 0, 0, 0.596);
-  opacity: 0.7;
+  background-color: rgb(211, 228, 227);
+  opacity: .6;
   z-index: 4;
   .spinner {
     display: inline-block;
@@ -909,7 +922,7 @@ body {
     height: 3rem;
     border: 3px solid $primary-color;
     border-radius: 50%;
-    border-top-color: $dark-color;
+    border-top-color: $light-color;
     margin: auto;
     animation: spin 1s ease-in-out infinite;
 
